Ohmyfood - responsive app

--- a/A-la-Francaise.html
+++ b/A-la-Francaise.html
@@ -49,35 +49,38 @@
                         <h2>ENTREES</h2>
                     </div>
                     <div class="R1-menu-carte-choix-entrees-nom">
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p1">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Tartare de poulpe acidulé</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Aux zests d'orange</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>25€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>25€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p2">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Velouté de légumes d'antan</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Carottes, panais, topinambour</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>35€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>35€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p3">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Soupe à l'oignon</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Revisitée</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>20€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>20€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
 
                     </div>
@@ -87,35 +90,38 @@
                         <h2>PLATS</h2>
                         </div>
                             <div class="R1-menu-carte-choix-entrees-nom">
-                                <div class="R1-menu-carte-choix-entrees-nom-x">
+                                <div class="R1-menu-carte-choix-entrees-nom-x" id="p4">
                                     <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                         <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Coquilles Saint-Jacques</h3>
                                         </div>
                                             <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Accompagnées d'une purée de panais</p>
                                             </div>
                                     </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>40€</h3>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>40€</h3>
                         </div>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                     </div>
-                    <div class="R1-menu-carte-choix-entrees-nom-x">
+                    <div class="R1-menu-carte-choix-entrees-nom-x" id="p5">
                         <div class="R1-menu-carte-choix-entrees-nom-x-text">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Magret de canard</h3>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Et parmentier de pommes de terre</p>
                             </div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>35€</h3>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>35€</h3>
                         </div>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                     </div>
-                    <div class="R1-menu-carte-choix-entrees-nom-x">
+                    <div class="R1-menu-carte-choix-entrees-nom-x" id="p6">
                         <div class="R1-menu-carte-choix-entrees-nom-x-text">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Pigeonneau d’Ile-et-Vilaine</h3>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Sur son lit de gnocchis aux légumes</p>
                             </div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>44€</h3>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>44€</h3>
                         </div>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                     </div>
 
                     </div>
@@ -125,35 +131,38 @@
                         <h2>DESSERTS</h2>
                     </div>
                     <div class="R1-menu-carte-choix-entrees-nom">
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p7">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Pétales de violettes glacés</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Et purée de noisettes</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>18€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>18€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p8">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Fondant au chocolat</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Revisité</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>22€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>22€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p9">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Millefeuille croustillant</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Myrtilles et pâte d’amande</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>23€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>23€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
 
                     </div>
