--- a/La-note-enchantée.html
+++ b/La-note-enchantée.html
@@ -49,45 +49,49 @@
                         <h2>ENTREES</h2>
                     </div>
                     <div class="R1-menu-carte-choix-entrees-nom">
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p1">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Ravioles de foie gras</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Accompagnés de leur crème à la truffe</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>25€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>25€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p2">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Caviar osciètre </h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Sur blini à la farine de blé noir</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>35€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>35€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p3">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Homard et espuma de potiron</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Mariné aux zestes d'orange</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>20€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>20€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p4">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Foie gras de canard cuit entier</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Confiture de figue et pain toasté</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>35€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>35€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
 
                     </div>
@@ -97,35 +101,38 @@
                         <h2>PLATS</h2>
                         </div>
                             <div class="R1-menu-carte-choix-entrees-nom">
-                                <div class="R1-menu-carte-choix-entrees-nom-x">
+                                <div class="R1-menu-carte-choix-entrees-nom-x" id="p5">
                                     <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                         <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Noix de coquilles Saint-Jacques</h3>
                                         </div>
                                             <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Sur lit de purée de céleri-rave</p>
                                             </div>
                                     </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>40€</h3>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>40€</h3>
                         </div>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                     </div>
-                    <div class="R1-menu-carte-choix-entrees-nom-x">
+                    <div class="R1-menu-carte-choix-entrees-nom-x" id="p6">
                         <div class="R1-menu-carte-choix-entrees-nom-x-text">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Langoustine poêlée</h3>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Purée de patate douce</p>
                             </div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>35€</h3>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>35€</h3>
                         </div>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                     </div>
-                    <div class="R1-menu-carte-choix-entrees-nom-x">
+                    <div class="R1-menu-carte-choix-entrees-nom-x"id="p7">
                         <div class="R1-menu-carte-choix-entrees-nom-x-text">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Mijoté de queue de boeuf </h3>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Et riz sauvage aux zestes de citron</p>
                             </div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>44€</h3>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>44€</h3>
                         </div>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                     </div>
 
                     </div>
@@ -135,35 +142,38 @@
                         <h2>DESSERTS</h2>
                     </div>
                     <div class="R1-menu-carte-choix-entrees-nom">
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p8">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Macaron noisette et chocolat</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Glace au caramel brun et sel de Guérande</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>18€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>18€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p9">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Baba au rhum revisité </h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Avec son coulis de citron</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>22€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>22€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p10">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Tarte au citron meringuée</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Déstructurée</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>23€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>23€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
 
                     </div>
