--- a/Le-délice-des-sens.html
+++ b/Le-délice-des-sens.html
@@ -49,35 +49,38 @@
                         <h2>ENTREES</h2>
                     </div>
                     <div class="R1-menu-carte-choix-entrees-nom">
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x"id="p1">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Tartare de thon</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Assaisonné au yuzu</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>25€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>25€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x"id="p2">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Bouchée de homard croustillant</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Et sa farandole de petits légumes</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>35€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>35€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x"id="p3">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Velouté de cèpes</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Aux truffes</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>20€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>20€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
 
                     </div>
@@ -87,35 +90,38 @@
                         <h2>PLATS</h2>
                         </div>
                             <div class="R1-menu-carte-choix-entrees-nom">
-                                <div class="R1-menu-carte-choix-entrees-nom-x" id="poulet">
+                                <div class="R1-menu-carte-choix-entrees-nom-x" id="p4">
                                     <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                         <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Poulet rôti aux herbes de Provence</h3>
                                         </div>
                                             <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre" id="creme"><p>Et sa crème de truffe</p>
                                             </div>
                                     </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>40€</h3>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>40€</h3>
                         </div>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                     </div>
-                    <div class="R1-menu-carte-choix-entrees-nom-x">
+                    <div class="R1-menu-carte-choix-entrees-nom-x"id="p5">
                         <div class="R1-menu-carte-choix-entrees-nom-x-text">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Langouste rôtie </h3>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Et ses légumes de saison</p>
                             </div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>35€</h3>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>35€</h3>
                         </div>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                     </div>
-                    <div class="R1-menu-carte-choix-entrees-nom-x">
+                    <div class="R1-menu-carte-choix-entrees-nom-x" id="p6">
                         <div class="R1-menu-carte-choix-entrees-nom-x-text">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Côte de boeuf Angus </h3>
                             </div>
                             <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Et sa purée de panais</p>
                             </div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>44€</h3>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>44€</h3>
                         </div>
+                        <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                     </div>
 
                     </div>
@@ -125,35 +131,38 @@
                         <h2>DESSERTS</h2>
                     </div>
                     <div class="R1-menu-carte-choix-entrees-nom">
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x"id="p7">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Farandole de desserts</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Du chef</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>18€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>18€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p8">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Crème brulée </h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>Revisitée</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>22€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>22€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
-                        <div class="R1-menu-carte-choix-entrees-nom-x">
+                        <div class="R1-menu-carte-choix-entrees-nom-x" id="p9">
                             <div class="R1-menu-carte-choix-entrees-nom-x-text">
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-titre"><h3>Tiramisu</h3>
                                 </div>
                                 <div class="R1-menu-carte-choix-entrees-nom-x-text-stitre"><p>À la noisette</p>
                                 </div>
                             </div>
-                            <div class="R1-menu-carte-choix-entrees-nom-x-price"><h3>23€</h3>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-price" id="pricebox"><h3>23€</h3>
                             </div>
+                            <div class="R1-menu-carte-choix-entrees-nom-x-anim"><span class="checkrotate"><i class="fas fa-check-circle"></i></span></div>
                         </div>
 
                     </div>
